clipboard overflow bugfix

--- a/src/main/assets/angular-material-clipboard/clipboard.scss
+++ b/src/main/assets/angular-material-clipboard/clipboard.scss
@@ -72,7 +72,8 @@ $md-input-clipbard-button-size: 30px !default;
   &__label {
     //cursor: pointer;
     //min-width: 120px;
-
+    text-overflow: ellipsis;
+    overflow: hidden;
     -webkit-flex: 1;
     -moz-flex: 1;
     -ms-flex: 1;
